src/app/globals.css
@import "tailwindcss";
@plugin "@tailwindcss/typography";

:root {
  --background: #ffffff;
  --foreground: #171717;
  --scrollbar-thumb: #d4d4d4;
  --scrollbar-thumb-hover: #a3a3a3;
}

@theme inline {
  --color-background: var(--background);
  --color-foreground: var(--foreground);
  --font-mono: var(--font-jetMono);
  --font-russo: var(--font-russo);
  --font-inter: var(--font-inter);
}

@media (prefers-color-scheme: dark) {
  :root {
    --background: #111111;
    --foreground: #d7d7d7;
    --scrollbar-thumb: #974200;
    --scrollbar-thumb-hover: #d05a00;
  }
}

body {
  background: var(--background);
  color: var(--foreground);
  font-family: Arial, Helvetica, sans-serif;
}

h1,
h2,
h3,
h4,
h5,
h6 {
  font-family: var(--font-russo), sans-serif;
}

p {
  font-family: var(--font-inter);
}

code,
pre,
kbd {
  font-family: var(--font-mono), monospace;
}

.contribution-scroll {
  -webkit-overflow-scrolling: touch;
  scrollbar-width: none;
}

.contribution-scroll::-webkit-scrollbar {
  display: none;
}

.scroll-container::-webkit-scrollbar {
  height: 6px;
  border-top: 1px solid gray;
}

.scroll-container::-webkit-scrollbar-track {
  background: transparent;
}

.scroll-container::-webkit-scrollbar-thumb {
  background: #000;
}

.scroll-container::-webkit-scrollbar-thumb:hover {
  background: #333;
}

@keyframes wiggle {
  0%,
  100% {
    transform: rotate(-15deg);
  }
  50% {
    transform: rotate(15deg);
  }
}
.animate-wiggle {
  animation: wiggle 1.5s ease-in-out infinite;
}

